ourprops-page-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ourprops-page
  namespace: frontend
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: ourprops-page
