ourprops-page-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ourprops-page
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: ourprops.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ourprops-page
                port:
                  number: 80
  ingressClassName: "gce"
